Archive2/c5/e9098b271ace7a/output
main.cpp:13:14: error: calling a protected constructor of class 'std::__1::basic_istream<char, std::__1::char_traits<char> >'
  auto is2 = std::istream{&cmdStreamBuf_}; // does not compile
             ^
/usr/include/c++/v1/istream:185:5: note: declared protected here
    basic_istream(basic_istream&& __rhs);
    ^
1 error generated.
